@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-08T08:16:45Z",
+  "timestamp" : "2022-06-09T00:59:21Z",
   "count_outdated" : 328,
   "uniques_outdated" : 175,
-  "count" : 350,
+  "count" : 351,
   "uniques" : 189,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-06-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
